--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "author": "raj nishad",
   "license": "ISC",
   "dependencies": {
-    "dotenv": "^16.3.1",
+    "desktop-screenshot": "^0.1.1",
     "express": "^4.18.2"
   }
 }
