--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "desktop-screenshot": "^0.1.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "socket.io": "^4.7.1"
   }
 }
