--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
   "author": "raj nishad",
   "license": "ISC",
   "dependencies": {
-    "desktop-screenshot": "^0.1.1",
     "express": "^4.18.2",
+    "screenshot-desktop": "^1.15.0",
+    "sharp": "^0.32.4",
     "socket.io": "^4.7.1"
   }
 }
