--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "author": "raj nishad",
   "license": "ISC",
   "dependencies": {
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "node-webcam": "^0.8.2",
     "screenshot-desktop": "^1.15.0",
     "sharp": "^0.32.4",
     "socket.io": "^4.7.1"
